# Solpay

./: package-lock.json
backend/: .env  Cargo.toml
backend/src/: main.rs  solana_client.rs  state.rs  types.rs  utils.rs  worker.rs
backend/src/handlers/: mod.rs  notification_handler.rs  schedule_handler.rs  subscription_handler.rs  transaction_handler.rs  user_handler.rs
backend/src/models/: mod.rs  notification.rs  schedule.rs  subscription.rs  transaction.rs  user.rs
backend/src/routes/: mod.rs  notification_routes.rs  schedule_routes.rs  subscription_routes.rs  transaction_routes.rs  user_routes.rs
front-end/: .gitignore  package-lock.json  package.json
front-end/app/: layout.tsx  page.tsx  types.ts
front-end/app/(main)/: layout.tsx
front-end/app/(main)/history/: page.jsx  page.tsx
front-end/app/(main)/marketplace/: page.tsx
front-end/app/(main)/notifications/: page.tsx
front-end/app/(main)/plans/: page.tsx
front-end/app/(main)/subscriptions/: page.jsx  page.tsx
front-end/app/components/providers/: ReactQueryProvider.tsx  SolanaWalletProvider.tsx
front-end/app/components/ui/: Error.tsx  Header.tsx  Input.tsx  Loader.tsx  Navbar.tsx  PlanDetails.tsx  PlanForm.tsx  Sidebar.tsx  SubscriptionDetails.tsx  SubscriptionForm.tsx  (+2 more)
front-end/app/hooks/: useActions.ts  useDbActions.ts  useMutations.ts  useProgram.ts  useProgramActions.ts  useSearch.ts
front-end/app/utils/: compression.ts  duration.ts  headers.tsx  token.ts  tuktuk.ts
program/: Anchor.toml  my-new-program-keypair.json  package-lock.json  package.json  tsconfig.json
program/programs/solpay/: Cargo.toml
program/programs/solpay/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  states.rs
program/scripts/: addQueueAuthority.ts  initTaskQueue.ts  initTuktukConfig.ts
program/tests/: program.ts  solpay.ts
(+17 files in other folders)
