[package]
name = "solpay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solpay"

[features]
# Necessary for Anchor to correctly generate the IDL for SPL types
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
# Ensure the token feature is enabled for the standard SPL Token program
anchor-spl = { version = "0.32.1", features = ["token"] }
# Note: It's unusual to have both spl-token and spl-token-2022 unless you specifically need both.
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
